--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "bun-plugin-dts": "^0.1.0",
     "bun-types": "^0.8.1",
+    "concurrently": "^8.2.1",
     "serve-static-bun": "^0.5.3",
     "typescript": "^5.2.2"
   },
@@ -16,6 +17,7 @@
     "build": "bun build.ts",
     "example:build": "bun src/examples/counter/build.ts",
     "example:start": "bun src/examples/counter/server.ts",
-    "example": "bun run example:build && bun run example:start"
+    "example": "bun run example:build && bun run example:start",
+    "example:dev": "WATCH=1 concurrently 'bun run example:build' 'bun run example:start'"
   }
 }
